server_hardening: add ES, bugfix

--- a/roles/server_hardening/templates/fw-lists-update.sh.j2
+++ b/roles/server_hardening/templates/fw-lists-update.sh.j2
@@ -141,6 +141,10 @@ EOF
 			URL=https://www.ipdeny.com/ipblocks/data/aggregated/ch-aggregated.zone
 			URL6=https://www.ipdeny.com/ipv6/ipaddresses/aggregated/ch-aggregated.zone
 			;;
+		ipdenyES)
+			URL=https://www.ipdeny.com/ipblocks/data/aggregated/es-aggregated.zone
+			URL6=https://www.ipdeny.com/ipv6/ipaddresses/aggregated/es-aggregated.zone
+			;;
 		ipdenyNL)
 			URL=https://www.ipdeny.com/ipblocks/data/aggregated/nl-aggregated.zone
 			URL6=https://www.ipdeny.com/ipv6/ipaddresses/aggregated/nl-aggregated.zone
